ros2/log/build_2025-07-06_12-02-47/auv/stderr.log
  File "/home/wiredauv2024/AUV/WIRED24-25/ros2/install/auv/lib/python3.8/site-packages/auv/sub_draft2.py", line 110
    print(ms))
             ^
SyntaxError: unmatched ')'

